<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_detail">Movie details</string>
    <string name="original_title">Original title</string>
    <string name="overview">Synopsis</string>
    <string name="release_date">Release date</string>
    <string name="vote_average">Rating</string>
    <string name="poster_picture_content_description">Poster of the movie</string>
    <string name="detail_error_message">Movie data not available</string>
    <string name="settings">Settings</string>
    <string name="film_poster">Film poster</string>
    <string name="order_by">Order by:</string>
    <string name="most_popular">Most popular</string>
    <string name="highest_rated">Highest rated</string>
    <string name="get_data_from_api_error">No data available, check your connection.</string>
    <string name="favourites">Favourites</string>
    <string name="video">video</string>
    <string name="highest_rated_films">Highest Rated Films</string>
    <string name="most_popular_films">Most Popular Films</string>
    <string name="favourite_films">Favourite Films</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>

</resources>
